--- a/trunk/locale/fi/po/Productmanagement.po
+++ b/trunk/locale/fi/po/Productmanagement.po
@@ -159,7 +159,7 @@ msgstr "Muokkaa tuotteen tietoja"
 
 #: ../goah/Modules/Productmanagement.pm:270
 msgid "Empty product group"
-msgstr ""
+msgstr "Tyhjä tuoteryhmä"
 
 #: ../templates/modules/Productmanagement/manufacturers.edit:5 ../templates/modules/Productmanagement/manufacturers.new:5 ../templates/modules/Productmanagement/productgroups.edit:5 ../templates/modules/Productmanagement/productgroups.new:5 ../templates/modules/Productmanagement/products.edit:5 ../templates/modules/Productmanagement/products.new:5
 msgid "Field marked with * is required"
@@ -167,7 +167,7 @@ msgstr "* Kentät pakollisia"
 
 #: ../templates/modules/Productmanagement/products:72
 msgid "Group total value:"
-msgstr ""
+msgstr "Ryhmän yhteissumma:"
 
 #: ../goah/Modules/Productmanagement.pm:74
 msgid "Groups"
@@ -287,7 +287,7 @@ msgstr "Ostohinta"
 
 #: ../goah/Modules/Productmanagement.pm:434 ../goah/Modules/Productmanagement.pm:555
 msgid "Required dropdown field"
-msgstr ""
+msgstr "Pudotusvalikon kenttä vaaditaan"
 
 #: ../goah/Modules/Productmanagement.pm:429 ../goah/Modules/Productmanagement.pm:551
 msgid "Required field"
@@ -375,4 +375,4 @@ msgstr "Tyhjä!"
 
 #: ../goah/Modules/Productmanagement.pm:434 ../goah/Modules/Productmanagement.pm:555
 msgid "unselected!"
-msgstr ""
+msgstr "valitsemattomat!"
